# libshimmer

./: .gitignore  CMakeLists.txt  LICENSE  analyse.sh  suppressions  uncrustify.cfg
api/: CMakeLists.txt
api/includes/: SDL2_apigen.h  SDL_apigen.h
api/sym/: SDL2_sym.h
api/tracers/: SDL2_tracer.cpp  SDL_tracer.cpp
apigen/: CMakeLists.txt  apigen.cpp  fdecl_matcher.h  header.h  source.h
apigen/includes/: common.h  decl.h  fdecl_matcher.h  function.h  header.h  output.h  parameter.h  source.h  type.h
apigen/sources/: common.cpp  fdecl_matcher.cpp  header.cpp  parameter.cpp  source.cpp  type.cpp
apigen/src/: fdecl_matcher.cpp  function.cpp  header.cpp  output.cpp  source.cpp
common/: CMakeLists.txt  atlas.h  buffer.h  camera.h  common.h  config.h  coords.h  dims.h  ellipse.h  env.cpp  env.h  file.cpp  file.h  fonts.h  freetype.h  img.cpp  img.h  json.h  limiter.h  logger.h  range.h  rectangle.h  series.h  str.cpp  str.h  unicodes.h
common/catch/: CMakeLists.txt  catch.cpp  coords.cpp  dims.cpp  env.cpp  file.cpp  img.cpp  json.cpp  series.cpp  str.cpp
common/catch/data/: file_b.txt  file_c
common/src/: _atlas.h  atlas.cpp  camera.cpp  ellipse.cpp  env.cpp  file.cpp  fonts.cpp  freetype.cpp  img.cpp  json.cpp  limiter.cpp  logger.cpp  rectangle.cpp  str.cpp
glpp/: CMakeLists.txt  buffer.h  cube.h  debug.h  element_array_buffer.h  enums.h  framebuffer.h  mbuffer.h  resource_loader.h  scene_phase.h  shapes.h  specs.h  texture.h  texture_2d.h  texture_unit.h  texture_units.h  uniform.h  vertex_array.h  vertex_buffer.h  viewport.h
glpp/examples/sdl/: CMakeLists.txt  example.frag  sdl_example.cpp
glpp/examples/sdl2/: CMakeLists.txt  sdl2_opengl.cpp  sdl2_simple.cpp
glpp/includes/: atlas_builder.h  attribute.h  bitmap.h  buffer.h  camera.h  cube.h  debug.h  element_array_buffer.h  entity.h  enums.h  font.h  font_atlas.h  font_face.h  font_loader.h  font_spec.h  framebuffer.h  ft_wrapper.h  ft_wrapper_impl.h  glpp.h  glyph.h  material.h  mbuffer.h  mesh.h  phase.h  pixel.h  pixels.h  program.h  quad.h  resource_loader.h  resource_manager.h  scene.h  scene_phase.h  shader.h  specs.h  text.h  texture.h  texture_2d.h  texture_units.h  uniform.h  utils.h  (+4 more)
glpp/shapes/: lens.h  quad.h
glpp/shapes/src/: lens.cpp  quad.cpp
glpp/sources/: atlas_builder.cpp  bitmap.cpp  buffer.cpp  camera.cpp  debug.cpp  element_array_buffer.cpp  entity.cpp  enums.cpp  font.cpp  font_atlas.cpp  font_face.cpp  font_loader.cpp  font_spec.cpp  framebuffer.cpp  ft_wrapper.cpp  ft_wrapper_impl.cpp  glyph.cpp  mbuffer.cpp  mesh.cpp  phase.cpp  pixels.cpp  program.cpp  resource_loader.cpp  scene.cpp  scene_phase.cpp  shader.cpp  text.cpp  texture.cpp  texture_2d.cpp  texture_units.cpp  uniform.cpp  utils.cpp  vertex_array.cpp  vertex_attrib.cpp
glpp/src/: attribute.cpp  camera.cpp  debug.cpp  entity.cpp  framebuffer.cpp  pixels.cpp  program.cpp  resource_loader.cpp  scene_phase.cpp  shader.cpp  shapes.cpp  texture.cpp  texture_2d.cpp  texture_unit.cpp  texture_units.cpp  uniform.cpp  vertex_array.cpp  vertex_attrib.cpp  viewport.cpp
libshimmer/: CMakeLists.txt  config_variables.h  config_variables.h.in  configuration.h  event.h  event_connector.h  event_exchange.h  exchange.h  file_reader.h  general_options.h  image_reader.h  limiter.h  options.h  renderer.h  video.h
libshimmer/catch/: CMakeLists.txt  aspect.cpp  catch.cpp  display.cpp  event_collector.cpp  event_exchange.cpp  event_logger.cpp  exchange.cpp  mouse.cpp  pipeline.cpp  window.cpp
libshimmer/catch/includes/: check_data.h  check_image.h  check_opengl.h
libshimmer/data/glsl/: default.frag
libshimmer/includes/: application.h  aspect.h  aspect_ratio.h  common.h  config.h  connector.h  coords.h  dims.h  display.h  environment.h  event.h  event_collector.h  event_logger.h  event_receiver.h  exchange.h  general_options.h  image_reader.h  limiter.h  logger.h  macros.h  mouse.h  options.h  pipeline.h  pipeline_builder.h  receiver.h  renderer.h  serialisers.h  shader_options.h  shader_reader.h  shim_macros.h  shimmer.h  video_options.h  window.h
libshimmer/includes/api/: init_api.h  keyboard_api.h  mouse_api.h  renderer_api.h  window_api.h
libshimmer/includes/keyboard/: keyboard.h
libshimmer/includes/macros/: accessor_macros.h  shim_macros.h
libshimmer/includes/mouse/: mouse.h
libshimmer/includes/renderer/: renderer.h
libshimmer/includes/utilities/: cache.hpp  file_reader.h  png_reader.h  regex_helper.h  simple_cache.hpp
libshimmer/includes/window/: window.h
libshimmer/sources/: aspect.cpp  aspect_ratio.cpp  config.cpp  display.cpp  environment.cpp  event.cpp  event_collector.cpp  event_logger.cpp  file_reader.cpp  image_reader.cpp  json.cpp  limiter.cpp  logger.cpp  mouse.cpp  options.cpp  pipeline.cpp  renderer.cpp  serialisers.cpp  shimmer.cpp  system.cpp  video_options.cpp  window.cpp
libshimmer/sources/keyboard/: keyboard.cpp
libshimmer/sources/mouse/: mouse.cpp
libshimmer/sources/utilities/: file_reader.cpp  png_reader.cpp  regex_helper.cpp
libshimmer/sources/window/: window.cpp
libshimmer/src/: config.cpp  configuration.cpp  dims.cpp  image_reader.cpp  logger.cpp  mouse.cpp  renderer.cpp  video.cpp
shaders/: CMakeLists.txt
shaders/glsl1.3/: default.frag  default.vert  xbrz3x.frag
shimmer/: CMakeLists.txt  aspect.h  aspect_ratio.h  configuration.h  dims.h  event_collector.h  event_logger.h  input.h  json.h  logger.h  renderer.h  shader_options.h  shader_reader.h  shimmer.h  system.h  video_options.h
shimmer/catch/: CMakeLists.txt  catch.cpp  event_exchange.cpp  pipeline.cpp  window.cpp
shimmer/catch/includes/: check_data.h  check_image.h
shimmer/src/: config.cpp  configuration.cpp  display.cpp  general_options.cpp  image_reader.cpp  input.cpp  options.cpp  pipeline.cpp  renderer.cpp  shader_options.cpp  shader_reader.cpp  shimmer.cpp  video_options.cpp  window.cpp
shims/: CMakeLists.txt
shims/sdl/: CMakeLists.txt  events.h  input.h  renderer.h  shim.h  video.h  window.h
shims/sdl2/: CMakeLists.txt  event.h  events.h  input.h  mouse.h  shim.h  video.h  window.h
(+131 files in other folders)
