###############################################################################
#   List common headers.
###############################################################################
set( HEADERS
        common.h
        coords.h
        dims.h
        env.h
        file.h
        img.h
        str.h )


###############################################################################
#   List common sources.
###############################################################################
set( SOURCES
        ${COMMON_ROOT}/env.cpp
        ${COMMON_ROOT}/file.cpp
        ${COMMON_ROOT}/img.cpp
        ${COMMON_ROOT}/str.cpp )


###############################################################################
#   Build common shared library.
###############################################################################
add_library( common SHARED ${HEADERS} ${SOURCES} )
target_include_directories( common
    PRIVATE "${EXTERNAL_ROOT}/includes" )

###############################################################################
#   Install libs and shaders
###############################################################################
install( TARGETS common DESTINATION lib )


###############################################################################
#   Build catch tests.
###############################################################################
add_subdirectory( catch )
